# GL42

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
docs/: Doxyfile
inc/: gl42.hpp
src/assets/: AssetLoader.cpp  AssetLoader.hpp
src/components/: Component.hpp  GameObject.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Transform.cpp  Transform.hpp
src/debug/: Debug.cpp  Debug.hpp  ILogable.hpp
src/engine/: Scene.hpp
src/exception/: Error.cpp  Error.hpp
src/math/: Math.cpp  Math.hpp  Matrix2x2.cpp  Matrix2x2.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
src/renderer/: Material.hpp  OpenGLDecl.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/shader/: Color.cpp  Color.hpp  Shader.cpp  Shader.hpp
src/utils/: Error.cpp  Error.hpp  InitializationExecption.hpp
src/window/: Window.cpp  Window.hpp
test/: TestVector.cpp
